Wed Jun 28 09:13:26 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add an OmLock, and sentries to the public methods in DADatabase.

	* Add "threadtest", a testsuite for checking thread safety.
          Currently has no (completed) tests.

	* Compile various things only if network databases are compiled in.
	  (currently doesn't work correctly).

Wed Jun 28 03:58:42 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Don't compile network stuff if it's configured off.

Tue Jun 27 17:37:16 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added ability to get writable databases from database manager.

Tue Jun 27 11:19:01 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added test for requiring -nsl (eg, on solaris).
          Only add network libraries if compiling in network code.
	  Change configure options for specifying debugging levels.

Tue Jun 27 10:09:13 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Changed "test -e" to "test -f" in Makefiles - test -e is not
	  portable.

Mon Jun 26 15:04:37 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added a swedish stemming algorithm.

Mon Jun 26 14:12:19 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Change debug class so that it has an operator<<, rather than
	  exposing a stream.  This is somewhat more portable.

Sat Jun 24 03:11:43 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Removed need for om_debug object to be initialised, since it wasn't
	  being on Solaris.

Fri Jun 23 18:56:13 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Removed use of a static object to do string to type conversion
	  (for stemming algorithm language specification, and for database
	  type specification).

Fri Jun 23 14:08:00 BST 2000 Olly Betts

	* Updated TODO

Thu Jun 22 15:01:00 BST 2000 Olly Betts

	* OM_DBTYPE_* now internal to database_manger.cc - use strings
	  elsewhere
